fixed szoftverek not getting hover styling when isDropdownVisible's value is true

--- a/src/css/Navbar.css
+++ b/src/css/Navbar.css
@@ -26,3 +26,11 @@
   transform: scale(1.03);
 }
 
+.hover-scalemain {
+  transition: transform 0.5s ease;
+}
+
+.hover-scalemain:hover {
+  transform: scale(1.1);
+}
+
